better syntactic structure

--- a/index.html
+++ b/index.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Joseph Zhang</title>
+    <title>Joseph Zhang Design</title>
     <meta name="author" content="Joseph Zhang" />
     <meta
       name="description"
-      content="Joseph is a designer exploring various forms of multimodal interaction."
+      content="Joseph is a designer interested in all things related to systems,
+      products, and multimodal interaction."
     />
 
     <meta
       name="keywords"
-      content="joseph, zhang, josephz, josephz.me, jxsephz, art , design, carnegie mellon, design, design, ux design, art, graphic design, interaction design, apple"
+      content="joseph, zhang, josephz, josephz.me, portfolio, design, carnegie mellon, design, design, ux design, apple, graphic design, interaction design, multimodal, brain technologies, natural ai"
     />
     <meta name="robots" content="index, follow" />
     <link rel="icon" href="cursor.png" />
@@ -22,179 +23,141 @@
   </head>
 
   <body class="index">
-    <div class="landing">
-      <div class="about">
-        <b style="margin-bottom: 10px">Joseph Z</b>
-        <br />
-        <p>
-          I'm a designer interested in all things related to systems, products,
-          and multimodal interaction. Through my work, I explore different ways
-          to visualize information and interact with computer interfaces.
-          Currently, I'm a fourth-year undergraduate studying
-          <a
-            class="cmu-design"
-            target="blank"
-            href="https://design.cmu.edu/programs/undergrad"
-            >Communication Design</a
-          >
-          and
-          <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
-            >Human-Computer Interaction</a
-          >
-          at Carnegie Mellon University. <br /><br />Previously I designed
-          multimodal experiences at
-          <a target="_blank" href="https://www.apple.com">Apple</a> and
-          <a target="_blank" href="https://www.natural.ai"
-            >Brain Technologies</a
-          >
-          and designed social experiences at
-          <a target="_blank" href="https://www.elevationchurch.org"
-            >Elevation Church</a
-          >. In my free time, I like chasing sunrises, eating tacos, and
-          scouring Facebook Marketplace for the next best furniture deal.
-        </p>
-      </div>
+    <main class="landing">
+      <article>
+        <section class="about">
+          <b style="margin-bottom: 7px; display: inline-block">Joseph Z.</b>
+          <p>
+            I'm a designer interested in all things related to systems,
+            products, and multimodal interaction. Through my work, I explore
+            different ways to visualize information and interact with computer
+            interfaces. Currently, I'm a fourth-year undergraduate studying
+            <a
+              class="cmu-design"
+              target="blank"
+              href="https://design.cmu.edu/programs/undergrad"
+              >Communication Design</a
+            >
+            and
+            <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+              >Human-Computer Interaction</a
+            >
+            at Carnegie Mellon University. <br /><br />Previously, I designed
+            multimodal platforms at
+            <a target="_blank" href="https://www.apple.com">Apple</a> and
+            <a target="_blank" href="https://www.natural.ai"
+              >Brain Technologies</a
+            >
+            and community experiences at
+            <a target="_blank" href="https://www.elevationchurch.org"
+              >Elevation Church</a
+            >. When not working, I like chasing sunrises, eating tacos, and
+            scouring FB Marketplace for the next best deal.
+          </p>
+        </section>
 
-      <footer>
-        <span></span>
-        <div class="contact">
-          <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
-            >Email</a
-          >
-          <a class="indent" target="_blank" href="josephzhang-resume.pdf"
-            >Resume</a
-          >
+        <footer>
+          <span></span>
+          <div class="contact">
+            <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
+              >Email</a
+            >
+            <a class="indent" target="_blank" href="josephzhang-resume.pdf"
+              >Resume</a
+            >
+            <a
+              class="indent"
+              target="_blank"
+              href="https://www.linkedin.com/in/josephzme/"
+              >LinkedIn</a
+            >
+          </div>
+        </footer>
+      </article>
+
+      <article class="media">
+        <figure>
           <a
-            class="indent"
             target="_blank"
-            href="https://www.linkedin.com/in/josephzme/"
-            >LinkedIn</a
+            href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+            class="aiga hoverCard"
           >
-        </div>
-      </footer>
+            <img src="public/aiga.jpg" />
 
-      <div class="media">
-        <a
-          target="_blank"
-          href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
-          class="aiga hoverCard"
-        >
-          <img src="public/aiga.jpg" />
-          <!-- <p> -->
-
-          <span
-            ><b>AIGA & Hue</b> / Interactive data visualization of +9400
-            designers from AIGA's design census</span
+            <span
+              ><b>AIGA & Hue</b> / Interactive data visualization of +9400
+              designers from AIGA's design census</span
+            >
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+            class="elevation-connect hoverCard"
           >
-          <!-- </p> -->
-        </a>
-        <a
-          target="_blank"
-          href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
-          class="elevation-connect hoverCard"
-        >
-          <img src="public/elevation-connect.jpg" />
-          <span
-            ><b>Elevation Connect</b> / Web app designed to help people join
-            communities in the church</span
+            <img src="public/elevation-connect.jpg" />
+            <span
+              ><b>Elevation Connect</b> / Web app designed to help people join
+              communities in the church</span
+            >
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+            class="pixel-push hoverCard"
           >
-        </a>
-        <a
-          target="_blank"
-          href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-          class="pixel-push hoverCard"
-        >
-          <video playsinline autoplay loop muted>
-            <source src="public/pixel-push.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <span>
-            <b>Pixel Push</b> / Collaborative painting experience exploring
-            webcam image-capture and sound recognition
-          </span>
-        </a>
-
-        <a
-          target="_blank"
-          href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-          class="reading-trends hoverCard"
-        >
-          <video playsinline autoplay loop muted>
-            <source src="public/reading-trends.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <span>
-            <b>Reading Trends</b> / Data visualization drawing relationships
-            between Google Trends and NYT Best Selling books in 2019
-          </span>
-        </a>
-
-        <a
-          target="_blank"
-          href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-          class="thinkspace hoverCard"
-        >
-          <video playsinline autoplay loop muted>
-            <source src="public/thinkspace.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <span>
-            <b>Thinkspace</b> / A speculative exploration of conversational
-            agents in discussion-based contexts
-          </span>
-        </a>
-
-        <!-- <div class="apple hoverCard">
-          <img src="public/apple.jpg" />
-          <p>
-            2021: Designed multimodal disambiguation patterns for various
-            hardware platforms<br />
-            2020: Designed platform-level voice UI patterns based on core
-            technology enhancement
-          </p>
-        </div>
-        <div class="elevation-church hoverCard">
-          <img src="public/elevation-church.jpg" />
-          <p>
-            12 weeks in Charlotte, North Carolina with some of the most
-            passionate people I know
-          </p>
-        </div>
-        <div class="natural hoverCard">
-          <video playsinline loop muted>
-            <source src="public/natural.mp4" type="video/mp4" />
-            Your browser does not support HTML video.
-          </video>
-          <p>
-            Designed future-facing product domains and multimodal interactions
-            focused around navigation and search <br />
-            [Video credits: Brain Technologies]
-          </p>
-        </div>
-
-        <div class="cmu-design hoverCard">
-          <img src="public/cmu-design.jpg" />
-          <p>My cute design cohort + some cool professors</p>
-        </div>
-        <div class="hci hoverCard">
-          <img src="public/hci.jpg" />
-        </div>
-
-        <div class="hci-research hoverCard">
-          <img src="public/hci-research.jpg" />
-          <p>
-            Conducted HRI field research focused on navigating stuck-robot
-            situations
-          </p>
-        </div> -->
-      </div>
-    </div>
+            <video playsinline autoplay loop muted>
+              <source src="public/pixel-push.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <span>
+              <b>Pixel Push</b> / Collaborative painting experience exploring
+              webcam image-capture and sound recognition
+            </span>
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+            class="reading-trends hoverCard"
+          >
+            <video playsinline autoplay loop muted>
+              <source src="public/reading-trends.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <span>
+              <b>Reading Trends</b> / Data visualization drawing relationships
+              between Google Trends and NYT Best Selling books in 2019
+            </span>
+          </a>
+        </figure>
+        <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+            class="thinkspace hoverCard"
+          >
+            <video playsinline autoplay loop muted>
+              <source src="public/thinkspace.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <span>
+              <b>Thinkspace</b> / A speculative exploration of conversational
+              agents in discussion-based contexts
+            </span>
+          </a>
+        </figure>
+      </article>
+    </main>
   </body>
-  <!-- <script
+  <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
-  ></script> -->
-
+  ></script>
   <!-- <script src="script/imageHover.js"></script> -->
 </html>
