--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             and community experiences at
             <a target="_blank" href="https://www.elevationchurch.org"
               >Elevation Church</a
-            >. When not working, I like chasing sunrises, eating tacos, and
+            >. In my free time, I like chasing sunrises, eating tacos, and
             scouring FB Marketplace for the next best deal.
           </p>
         </section>
@@ -78,6 +78,7 @@
       <article class="media">
         <figure>
           <a
+            alt="Image of Project 1: AIGA & Hue"
             target="_blank"
             href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
             class="aiga hoverCard"
@@ -92,6 +93,7 @@
         </figure>
         <figure>
           <a
+            alt="Image of Project 2: Elevation Connect"
             target="_blank"
             href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
             class="elevation-connect hoverCard"
@@ -105,22 +107,7 @@
         </figure>
         <figure>
           <a
-            target="_blank"
-            href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-            class="pixel-push hoverCard"
-          >
-            <video playsinline autoplay loop muted>
-              <source src="public/pixel-push.mp4" type="video/mp4" />
-              Your browser does not support HTML video.
-            </video>
-            <span>
-              <b>Pixel Push</b> / Collaborative painting experience exploring
-              webcam image-capture and sound recognition
-            </span>
-          </a>
-        </figure>
-        <figure>
-          <a
+            alt="Image of Project 4: Readings Trends"
             target="_blank"
             href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
             class="reading-trends hoverCard"
@@ -137,6 +124,25 @@
         </figure>
         <figure>
           <a
+            alt="Video of Project 3: Pixel Push"
+            target="_blank"
+            href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+            class="pixel-push hoverCard"
+          >
+            <video playsinline autoplay loop muted>
+              <source src="public/pixel-push.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <span>
+              <b>Pixel Push</b> / Collaborative painting experience exploring
+              webcam image-capture and sound recognition
+            </span>
+          </a>
+        </figure>
+
+        <figure>
+          <a
+            alt="Image of Project 5: Thinkspace"
             target="_blank"
             href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
             class="thinkspace hoverCard"
