--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
             and community experiences at
             <a target="_blank" href="https://www.elevationchurch.org"
               >Elevation Church</a
-            >. In my free time, I like chasing sunrises, eating tacos, and
-            scouring FB Marketplace for the next best deal.
+            >. In my free time, I like eating tacos and scouring FB Marketplace
+            for the next best deal.
           </p>
         </section>
 
@@ -107,6 +107,23 @@
         </figure>
         <figure>
           <a
+            alt="Image of Project 3: Pixel Push"
+            target="_blank"
+            href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+            class="pixel-push hoverCard"
+          >
+            <video playsinline autoplay loop muted>
+              <source src="public/pixel-push.mp4" type="video/mp4" />
+              Your browser does not support HTML video.
+            </video>
+            <span>
+              <b>Pixel Push</b> / Collaborative painting experience exploring
+              webcam image-capture and sound recognition
+            </span>
+          </a>
+        </figure>
+        <figure>
+          <a
             alt="Image of Project 4: Readings Trends"
             target="_blank"
             href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
@@ -119,23 +136,6 @@
             <span>
               <b>Reading Trends</b> / Data visualization drawing relationships
               between Google Trends and NYT Best Selling books in 2019
-            </span>
-          </a>
-        </figure>
-        <figure>
-          <a
-            alt="Video of Project 3: Pixel Push"
-            target="_blank"
-            href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-            class="pixel-push hoverCard"
-          >
-            <video playsinline autoplay loop muted>
-              <source src="public/pixel-push.mp4" type="video/mp4" />
-              Your browser does not support HTML video.
-            </video>
-            <span>
-              <b>Pixel Push</b> / Collaborative painting experience exploring
-              webcam image-capture and sound recognition
             </span>
           </a>
         </figure>
