--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             class="pixel-push hoverCard"
           >
             <video playsinline autoplay loop muted>
-              <source src="public/pixel-push.mp4" type="video/mp4" />
+              <source src="public/pixel-push-2.mp4" type="video/mp4" />
               Your browser does not support HTML video.
             </video>
             <span>
