remove jquery line

--- a/index.html
+++ b/index.html
@@ -78,12 +78,11 @@
       <article class="media">
         <figure>
           <a
-            alt="Image of Project 1: AIGA & Hue"
             target="_blank"
             href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
             class="aiga hoverCard"
           >
-            <img src="public/aiga.jpg" />
+            <img alt="Image of Project 1: AIGA & Hue" src="public/aiga.jpg" />
 
             <span
               ><b>AIGA & Hue</b> / Interactive data visualization of +9400
@@ -93,12 +92,14 @@
         </figure>
         <figure>
           <a
-            alt="Image of Project 2: Elevation Connect"
             target="_blank"
             href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
             class="elevation-connect hoverCard"
           >
-            <img src="public/elevation-connect.jpg" />
+            <img
+              alt="Image of Project 2: Elevation Connect"
+              src="public/elevation-connect.jpg"
+            />
             <span
               ><b>Elevation Connect</b> / Web app designed to help people join
               communities in the church</span
@@ -107,13 +108,12 @@
         </figure>
         <figure>
           <a
-            alt="Image of Project 3: Pixel Push"
             target="_blank"
             href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
             class="pixel-push hoverCard"
           >
             <video playsinline autoplay loop muted>
-              <source src="public/pixel-push-2.mp4" type="video/mp4" />
+              <source src="public/pixel-push.mp4" type="video/mp4" />
               Your browser does not support HTML video.
             </video>
             <span>
@@ -124,7 +124,6 @@
         </figure>
         <figure>
           <a
-            alt="Image of Project 4: Readings Trends"
             target="_blank"
             href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
             class="reading-trends hoverCard"
@@ -142,7 +141,6 @@
 
         <figure>
           <a
-            alt="Image of Project 5: Thinkspace"
             target="_blank"
             href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
             class="thinkspace hoverCard"
@@ -160,10 +158,10 @@
       </article>
     </main>
   </body>
-  <script
+  <!-- <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
-  ></script>
+  ></script> -->
   <!-- <script src="script/imageHover.js"></script> -->
 </html>
