name title update

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <main class="landing">
       <article>
         <section class="about">
-          <b style="margin-bottom: 7px; display: inline-block">Joseph Z.</b>
+          <b style="margin-bottom: 7px; display: inline-block">Joseph Zhang</b>
           <p>
             I'm a designer interested in all things related to systems,
             products, and multimodal interaction. Through my work, I explore
