revert back to video for pixel push

--- a/index.html
+++ b/index.html
@@ -112,16 +112,10 @@
             href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
             class="pixel-push hoverCard"
           >
-            <img
-              alt="Image of Project 3: Pixel Push"
-              Pixel
-              Push
-              src="public/pixel-push.png"
-            />
-            <!-- <video playsinline autoplay loop muted>
+            <video playsinline autoplay loop muted>
               <source src="public/pixel-push.mp4" type="video/mp4" />
               Your browser does not support HTML video.
-            </video> -->
+            </video>
             <span>
               <b>Pixel Push</b> / Collaborative painting experience exploring
               webcam image-capture and sound recognition
