--- a/index.html
+++ b/index.html
@@ -113,11 +113,11 @@
             class="pixel-push hoverCard"
           >
             <video playsinline autoplay loop muted>
-              <source src="public/pixel-push-short.mp4" type="video/mp4" />
+              <source src="public/reading-trends.mp4" type="video/mp4" />
               Your browser does not support HTML video.
             </video>
             <span>
-              <b>Pixel Push</b> / Collaborative painting experience exploring
+              <b>Pixel Push!!</b> / Collaborative painting experience exploring
               webcam image-capture and sound recognition
             </span>
           </a>
