--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
             class="pixel-push hoverCard"
           >
             <video playsinline autoplay loop muted>
-              <source src="public/reading-trends.mp4" type="video/mp4" />
+              <source src="public/pixel-push.mp4" type="video/mp4" />
               Your browser does not support HTML video.
             </video>
             <span>
@@ -129,7 +129,7 @@
             class="reading-trends hoverCard"
           >
             <video playsinline autoplay loop muted>
-              <source src="public/reading-trends.mp4" type="video/mp4" />
+              <source src="public/pixel-push.mp4" type="video/mp4" />
               Your browser does not support HTML video.
             </video>
             <span>
@@ -146,7 +146,7 @@
             class="thinkspace hoverCard"
           >
             <video playsinline autoplay loop muted>
-              <source src="public/thinkspace.mp4" type="video/mp4" />
+              <source src="public/pixel-push.mp4" type="video/mp4" />
               Your browser does not support HTML video.
             </video>
             <span>
