repush of test video

--- a/index.html
+++ b/index.html
@@ -117,7 +117,7 @@
               Your browser does not support HTML video.
             </video>
             <span>
-              <b>Pixel Push (test)</b> / Collaborative painting experience
+              <b>Pixel Push (test!)</b> / Collaborative painting experience
               exploring webcam image-capture and sound recognition
             </span>
           </a>
