--- a/index.html
+++ b/index.html
@@ -113,12 +113,12 @@
             class="pixel-push hoverCard"
           >
             <video playsinline autoplay loop muted>
-              <source src="public/pixel-push-compressed.mp4" type="video/mp4" />
+              <source src="public/pixel-push.mp4" type="video/mp4" />
               Your browser does not support HTML video.
             </video>
             <span>
-              <b>Pixel Push (test!)</b> / Collaborative painting experience
-              exploring webcam image-capture and sound recognition
+              <b>Pixel Push</b> / Collaborative painting experience exploring
+              webcam image-capture and sound recognition
             </span>
           </a>
         </figure>
