--- a/index.html
+++ b/index.html
@@ -29,9 +29,7 @@
           <b style="margin-bottom: 7px; display: inline-block">Joseph Zhang</b>
           <p>
             I'm a designer interested in all things related to systems,
-            products, and multimodal interaction. Through my work, I explore
-            different ways to visualize information and interact with computer
-            interfaces. Currently, I'm a fourth-year undergraduate studying
+            products, and multimodal interaction. With a background in
             <a
               class="cmu-design"
               target="blank"
@@ -42,17 +40,29 @@
             <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
               >Human-Computer Interaction</a
             >
-            at Carnegie Mellon University. <br /><br />Previously, I designed
-            multimodal platforms at
-            <a target="_blank" href="https://www.apple.com">Apple</a> and
+            , I explore different ways to visualize information and interact
+            with computer interfaces.
+            <!-- Currently, I'm a fourth-year undergraduate studying
+            <a
+              class="cmu-design"
+              target="blank"
+              href="https://design.cmu.edu/programs/undergrad"
+              >Communication Design</a
+            >
+            and
+            <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+              >Human-Computer Interaction</a
+            >
+            at Carnegie Mellon University.  --><br /><br />
+            My experience ranges from working in big and small tech to designing
+            for non-profits. Previously, I designed at places like
+            <a target="_blank" href="https://www.apple.com">Apple</a>,
             <a target="_blank" href="https://www.natural.ai"
               >Brain Technologies</a
-            >
-            and community experiences at
+            >, and
             <a target="_blank" href="https://www.elevationchurch.org"
               >Elevation Church</a
-            >. In my free time, I like eating tacos and scouring FB Marketplace
-            for the next best deal.
+            >. If you have an interesting idea, would love to get in touch.
           </p>
         </section>
 
@@ -76,11 +86,25 @@
       </article>
 
       <article class="media">
+        <!-- <figure>
+          <a
+            target="_blank"
+            href="https://josephz.notion.site/Natural-AI-9bf5bc35f91545e3bcce20bc9450db05"
+            class="hoverCard"
+          >
+            <img alt="Image of Projec: Natural AI" src="public/natural.jpg" />
+
+            <span>
+              <b>Natural AI</b> / Designed for various commerce domains and
+              interactions focused around navigation and search
+            </span>
+          </a>
+        </figure> -->
         <figure>
           <a
             target="_blank"
             href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
-            class="aiga hoverCard"
+            class="hoverCard"
           >
             <img alt="Image of Project 1: AIGA & Hue" src="public/aiga.jpg" />
 
@@ -94,7 +118,7 @@
           <a
             target="_blank"
             href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
-            class="elevation-connect hoverCard"
+            class="hoverCard"
           >
             <img
               alt="Image of Project 2: Elevation Connect"
@@ -110,7 +134,7 @@
           <a
             target="_blank"
             href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-            class="pixel-push hoverCard"
+            class="hoverCard"
           >
             <video playsinline autoplay loop muted>
               <source src="public/pixel-push.mp4" type="video/mp4" />
@@ -126,7 +150,7 @@
           <a
             target="_blank"
             href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-            class="reading-trends hoverCard"
+            class="hoverCard"
           >
             <video playsinline autoplay loop muted>
               <source src="public/reading-trends.mp4" type="video/mp4" />
@@ -143,7 +167,7 @@
           <a
             target="_blank"
             href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-            class="thinkspace hoverCard"
+            class="hoverCard"
           >
             <video playsinline autoplay loop muted>
               <source src="public/thinkspace.mp4" type="video/mp4" />
