style and copy changes

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             >, and
             <a target="_blank" href="https://www.elevationchurch.org"
               >Elevation Church</a
-            >. If you have an interesting idea, would love to get in touch.
+            >. If you have an interesting idea, let's get in touch.
           </p>
         </section>
 
