mobile styling changes

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
           <b style="margin-bottom: 10px; display: inline-block">Joseph Zhang</b>
           <p>
             I'm a designer interested in all things related to systems,
-            products, and multimodal interaction. With a background in
+            collaboration tools, and multimodal interaction. With a background in
             <a
               class="cmu-design"
               target="blank"
@@ -39,9 +39,7 @@
             and
             <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
               >Human-Computer Interaction</a
-            >
-            , I explore different ways to visualize information and interact
-            with computer interfaces. 
+            >, I explore different ways to visualize information and use computer interfaces. 
             <br/><br/>
              My experience ranges from working in big and small tech to designing
             for non-profits. Previously, I designed at places like
