--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <section class="about">
           <b style="margin-bottom: 10px; display: inline-block">Joseph Zhang</b>
           <p>
-            I'm a designer interested in all things related to systems,
-            collaboration tools, and multimodal interaction. With a background in
+            I'm a designer interested in all things related to data,
+            authoring tools, and multimodal interaction. With a background in
             <a
               class="cmu-design"
               target="blank"
@@ -73,7 +73,7 @@
       </article>
 
       <article class="media">
-        <!-- <figure>
+        <figure>
           <a
             target="_blank"
             href="https://josephz.notion.site/Natural-AI-9bf5bc35f91545e3bcce20bc9450db05"
@@ -86,7 +86,7 @@
               interactions focused around navigation and search
             </span>
           </a>
-        </figure> -->
+        </figure>
         <figure>
           <a
             target="_blank"
