--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
       </article>
 
       <article class="media">
-        <figure>
+        <!-- <figure>
           <a
             target="_blank"
             href="https://josephz.notion.site/Natural-AI-9bf5bc35f91545e3bcce20bc9450db05"
@@ -86,7 +86,7 @@
               interactions focused around navigation and search
             </span>
           </a>
-        </figure>
+        </figure> -->
         <figure>
           <a
             target="_blank"
