--- a/index.html
+++ b/index.html
@@ -27,30 +27,34 @@
       <article>
         <section class="about">
           <b style="margin-bottom: 10px; display: inline-block">Joseph Zhang</b>
-          <p>
-            I'm a designer interested in all things related to data,
-            authoring tools, and multimodal interaction. With a background in
-            <a
-              class="cmu-design"
-              target="blank"
-              href="https://design.cmu.edu/programs/undergrad"
-              >Communication Design</a
-            >
-            and
-            <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
-              >Human-Computer Interaction</a
-            >, I explore different ways to visualize information and use computer interfaces. 
-            <br/><br/>
-             My experience ranges from working in big and small tech to designing
-            for non-profits. Previously, I designed at places like
-            <a target="_blank" href="https://www.apple.com">Apple</a>,
-            <a target="_blank" href="https://www.natural.ai"
-              >Brain Technologies</a
-            >, and
-            <a target="_blank" href="https://www.elevationchurch.org"
-              >Elevation Church</a
-            >. If you have an interesting idea, let's get in touch.
-          </p>
+          <div>
+            <p>
+              I'm a designer interested in all things related to data,
+              collaboration tools, and multimodal interaction. With a background in
+              <a
+                class="cmu-design"
+                target="blank"
+                href="https://design.cmu.edu/programs/undergrad"
+                >Communication Design</a
+              >
+              and
+              <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
+                >Human-Computer Interaction</a
+              >, I explore different ways to visualize information and use computer interfaces. 
+              <br/><br/>
+            </p>
+            <p>
+              My experience ranges from working in big and small tech to designing
+              for non-profits. Previously, I designed at places like
+              <a target="_blank" href="https://www.apple.com">Apple</a>,
+              <a target="_blank" href="https://www.natural.ai"
+                >Brain Technologies</a
+              >, and
+              <a target="_blank" href="https://www.elevationchurch.org"
+                >Elevation Church</a
+              >. If you have an interesting idea, let's get in touch.
+            </p>
+          </div>
         </section>
 
         <footer>
