--- a/index.html
+++ b/index.html
@@ -1,182 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>Joseph Zhang Design</title>
-    <meta name="author" content="Joseph Zhang" />
-    <meta
-      name="description"
-      content="Joseph is a designer interested in all things related to systems,
-      products, and multimodal interaction."
-    />
 
-    <meta
-      name="keywords"
-      content="joseph, zhang, josephz, josephz.me, portfolio, design, carnegie mellon, design, design, ux design, apple, graphic design, interaction design, multimodal, brain technologies, natural ai"
-    />
-    <meta name="robots" content="index, follow" />
-    <link rel="icon" href="cursor.png" />
-    <link rel="stylesheet" href="main.css" />
-    <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
-  </head>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta http-equiv="X-UA-Compatible" content="ie=edge" />
+  <title>Joseph Zhang Design</title>
+  <meta name="author" content="Joseph Zhang" />
+  <meta name="description" content="Joseph is a designer interested in all things related to systems,
+      products, and multimodal interaction." />
 
-  <body class="index">
-    <main class="landing">
-      <article>
-        <section class="about">
-          <b style="margin-bottom: 10px; display: inline-block">Joseph Zhang</b>
-          <div>
-            <p>
-              I'm a designer interested in all things related to data,
-              collaboration tools, and multimodal interaction. With a background in
-              <a
-                class="cmu-design"
-                target="blank"
-                href="https://design.cmu.edu/programs/undergrad"
-                >Communication Design</a
-              >
-              and
-              <a class="hci" target="blank" href="https://www.hcii.cmu.edu"
-                >Human-Computer Interaction</a
-              >, I explore different ways to visualize information and use computer interfaces. 
-              <br/><br/>
-            </p>
-            <p>
-              My experience ranges from working in big and small tech to designing
-              for non-profits. Previously, I designed at places like
-              <a target="_blank" href="https://www.apple.com">Apple</a>,
-              <a target="_blank" href="https://www.natural.ai"
-                >Brain Technologies</a
-              >, and
-              <a target="_blank" href="https://www.elevationchurch.org"
-                >Elevation Church</a
-              >. If you have an interesting idea, let's get in touch.
-            </p>
-          </div>
-        </section>
+  <meta name="keywords"
+    content="joseph, zhang, josephz, josephz.me, portfolio, design, carnegie mellon, design, design, ux design, apple, graphic design, interaction design, multimodal, brain technologies, natural ai" />
+  <meta name="robots" content="index, follow" />
+  <link rel="icon" href="cursor.png" />
+  <link rel="stylesheet" href="main.css" />
+  <link rel="stylesheet" href="https://use.typekit.net/srk5tly.css" />
+</head>
 
-        <footer>
-          <span></span>
-          <div class="contact">
-            <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu"
-              >Email</a
-            >
-            <a class="indent" target="_blank" href="josephzhang-resume.pdf"
-              >Resume</a
-            >
-            <a
-              class="indent"
-              target="_blank"
-              href="https://www.linkedin.com/in/josephzme/"
-              >LinkedIn</a
-            >
-          </div>
-        </footer>
-      </article>
+<body class="index">
+  <main class="landing">
+    <article>
+      <section class="about">
+        <b style="margin-bottom: 10px; display: inline-block">Joseph Zhang</b>
+        <div>
+          <p>
+            I'm a designer interested in all things related to data,
+            creative tools, and multimodal interaction. I believe good design is inherently emotional and affects
+            people in a way that can't be rationally understood. I'm a fourth year undergrad at Carnegie Mellon studying
+            <a class="cmu-design" target="blank" href="https://design.cmu.edu/programs/undergrad">Communication
+              Design</a>
+            and
+            <a class="hci" target="blank" href="https://www.hcii.cmu.edu">Human-Computer Interaction</a>.
+            <br /><br />
+          </p>
+          <p>
+            Previously, I interned at
+            <a target="_blank" href="https://www.apple.com">Apple</a>,
+            <a target="_blank" href="https://www.natural.ai">Brain Technologies</a>, and
+            <a target="_blank" href="https://www.elevationchurch.org">Elevation Church</a>. 
+            Currently, I'm designing editor experiences at <a target="_blank"
+            href="https://www.skiff.org">Skiff</a>, a
+            Web3 startup. On the side, I'm helping build and launch an NFT collection, <a target="_blank" href="https://twitter.com/coolmanuniverse"> Coolman's
+            Universe</a>.
+            <br><br> If you have an interesting
+            idea, let's get in touch.
+          </p>
+        </div>
+      </section>
 
-      <article class="media">
-        <!-- <figure>
-          <a
-            target="_blank"
-            href="https://josephz.notion.site/Natural-AI-9bf5bc35f91545e3bcce20bc9450db05"
-            class="hoverCard"
-          >
-            <img alt="Image of Projec: Natural AI" src="public/natural.jpg" />
+      <footer>
+        <span></span>
+        <div class="contact">
+          <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu">Email</a>
+          <a class="indent" target="_blank" href="josephzhang-resume.pdf">Resume</a>
+          <a class="indent" target="_blank" href="https://www.linkedin.com/in/josephzme/">LinkedIn</a>
+        </div>
+      </footer>
+    </article>
 
-            <span>
-              <b>Natural AI</b> / Designed for various commerce domains and
-              interactions focused around navigation and search
-            </span>
-          </a>
-        </figure> -->
-        <figure>
-          <a
-            target="_blank"
-            href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
-            class="hoverCard"
-          >
-            <img alt="Image of Project 1: AIGA & Hue" src="public/aiga.jpg" />
+    <article class="media">
 
-            <span
-              ><b>AIGA & Hue</b> / Interactive data visualization of +9400
-              designers from AIGA's design census</span
-            >
-          </a>
-        </figure>
-        <figure>
-          <a
-            target="_blank"
-            href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
-            class="hoverCard"
-          >
-            <img
-              alt="Image of Project 2: Elevation Connect"
-              src="public/elevation-connect.jpg"
-            />
-            <span
-              ><b>Elevation Connect</b> / Web app designed to help people join
-              communities in the church</span
-            >
-          </a>
-        </figure>
-        <figure>
-          <a
-            target="_blank"
-            href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
-            class="hoverCard"
-          >
-            <video playsinline autoplay loop muted>
-              <source src="public/pixel-push.mp4" type="video/mp4" />
-              Your browser does not support HTML video.
-            </video>
-            <span>
-              <b>Pixel Push</b> / Collaborative painting experience exploring
-              webcam image-capture and sound recognition
-            </span>
-          </a>
-        </figure>
-        <figure>
-          <a
-            target="_blank"
-            href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
-            class="hoverCard"
-          >
-            <video playsinline autoplay loop muted>
-              <source src="public/reading-trends.mp4" type="video/mp4" />
-              Your browser does not support HTML video.
-            </video>
-            <span>
-              <b>Reading Trends</b> / Data visualization drawing relationships
-              between Google Trends and NYT Best Selling books in 2019
-            </span>
-          </a>
-        </figure>
+      <figure>
+        <a target="_blank" href="https://josephz.notion.site/Apple-91d54c71155d444c9a1abf2a0e8d5f43"
+          class="hoverCard">
+          <img alt="Image of Projec: Natural AI" src="public/apple.jpg" />
 
-        <figure>
-          <a
-            target="_blank"
-            href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
-            class="hoverCard"
-          >
-            <video playsinline autoplay loop muted>
-              <source src="public/thinkspace.mp4" type="video/mp4" />
-              Your browser does not support HTML video.
-            </video>
-            <span>
-              <b>Thinkspace</b> / A speculative exploration of conversational
-              agents in discussion-based contexts
-            </span>
-          </a>
-        </figure>
-      </article>
-    </main>
-  </body>
-  <!-- <script
+          <span>
+            <b>Apple</b> / Designed platform-level interactions for Siri
+          </span>
+        </a>
+      </figure>
+      <figure>
+        <a target="_blank" href="https://josephz.notion.site/Natural-AI-9bf5bc35f91545e3bcce20bc9450db05"
+          class="hoverCard">
+          <img alt="Image of Projec: Natural AI" src="public/natural-2.jpg" />
+
+          <span>
+            <b>Brain Technologies</b> / Nine months of R&D and shipped features for Natural AI 
+          </span>
+        </a>
+      </figure>
+      <figure>
+        <a target="_blank" href="https://josephz.notion.site/AIGA-Hue-38cd5f40c38c464ab1c5885468a1a3de"
+          class="hoverCard">
+          <img alt="Image of Project 1: AIGA & Hue" src="public/aiga.jpg" />
+
+          <span><b>AIGA & Hue</b> / Interactive data visualization of +9400
+            designers from AIGA's design census</span>
+        </a>
+      </figure>
+      <figure>
+        <a target="_blank" href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
+          class="hoverCard">
+          <img alt="Image of Project 2: Elevation Connect" src="public/elevation-connect.jpg" />
+          <span><b>Elevation Connect</b> / Web app designed to help people join
+            communities in the church</span>
+        </a>
+      </figure>
+      <figure>
+        <a target="_blank" href="https://josephz.notion.site/Pixel-Push-48910c3a971747b0b6fc3f31572b9984"
+          class="hoverCard">
+          <video playsinline autoplay loop muted>
+            <source src="public/pixel-push.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <span>
+            <b>Pixel Push</b> / Collaborative painting experience exploring
+            webcam image-capture and sound recognition
+          </span>
+        </a>
+      </figure>
+      <figure>
+        <a target="_blank" href="https://josephz.notion.site/Reading-Trends-2c9be594b74c44e885724dc7a910e42e"
+          class="hoverCard">
+          <video playsinline autoplay loop muted>
+            <source src="public/reading-trends.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <span>
+            <b>Reading Trends</b> / Data visualization drawing relationships
+            between Google Trends and NYT Best Selling books in 2019
+          </span>
+        </a>
+      </figure>
+
+      <figure>
+        <a target="_blank" href="https://josephz.notion.site/Thinkspace-24f3dc1c62904b0da412b0a4230cc92d"
+          class="hoverCard">
+          <video playsinline autoplay loop muted>
+            <source src="public/thinkspace.mp4" type="video/mp4" />
+            Your browser does not support HTML video.
+          </video>
+          <span>
+            <b>Thinkspace</b> / A speculative exploration of conversational
+            agents in discussion-based contexts
+          </span>
+        </a>
+      </figure>
+    </article>
+  </main>
+</body>
+<!-- <script
     src="https://code.jquery.com/jquery-3.5.1.js"
     integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
     crossorigin="anonymous"
   ></script> -->
-  <!-- <script src="script/imageHover.js"></script> -->
+<!-- <script src="script/imageHover.js"></script> -->
+
 </html>
