--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
           <img alt="Image of Projec: Natural AI" src="public/apple.jpg" />
 
           <span>
-            <b>Apple</b> / Designed platform-level interactions for Siri
+            <b>Apple</b> / Designed platform-level Siri interactions
           </span>
         </a>
       </figure>
@@ -77,7 +77,7 @@
           <img alt="Image of Projec: Natural AI" src="public/natural-2.jpg" />
 
           <span>
-            <b>Brain Technologies</b> / Nine months of R&D and shipped features for Natural AI 
+            <b>Brain Technologies</b> / Shipped numerous features around notifications, NLP search, and various domain-related work.
           </span>
         </a>
       </figure>
