fix line heights

--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
       </section>
 
       <footer>
-        <span></span>
+
         <div class="contact">
           <a class="indent" target="_blank" href="mailto:josephzhang@cmu.edu">Email</a>
           <a class="indent" target="_blank" href="josephzhang-resume.pdf">Resume</a>
@@ -66,9 +66,9 @@
           class="hoverCard">
           <img alt="Image of Projec: Natural AI" src="public/apple.jpg" />
 
-          <span>
+          <small>
             <b>Apple</b> / Designed platform-level Siri interactions
-          </span>
+          </small>
         </a>
       </figure>
       <figure>
@@ -76,9 +76,9 @@
           class="hoverCard">
           <img alt="Image of Projec: Natural AI" src="public/natural-2.jpg" />
 
-          <span>
+          <small>
             <b>Brain Technologies</b> / Shipped numerous features around notifications, NLP search, and various domain-related work.
-          </span>
+          </small>
         </a>
       </figure>
       <figure>
@@ -86,16 +86,16 @@
           class="hoverCard">
           <img alt="Image of Project 1: AIGA & Hue" src="public/aiga.jpg" />
 
-          <span><b>AIGA & Hue</b> / Interactive data visualization of +9400
-            designers from AIGA's design census</span>
+          <small><b>AIGA & Hue</b> / Interactive data visualization of +9400
+            designers from AIGA's design census</small>
         </a>
       </figure>
       <figure>
         <a target="_blank" href="https://josephz.notion.site/Elevation-Connect-ac95e52bf2794c74b95f29810c11a089"
           class="hoverCard">
           <img alt="Image of Project 2: Elevation Connect" src="public/elevation-connect.jpg" />
-          <span><b>Elevation Connect</b> / Web app designed to help people join
-            communities in the church</span>
+          <small><b>Elevation Connect</b> / Web app designed to help people join
+            communities in the church</small>
         </a>
       </figure>
       <figure>
@@ -105,10 +105,10 @@
             <source src="public/pixel-push.mp4" type="video/mp4" />
             Your browser does not support HTML video.
           </video>
-          <span>
+          <small>
             <b>Pixel Push</b> / Collaborative painting experience exploring
             webcam image-capture and sound recognition
-          </span>
+          </small>
         </a>
       </figure>
       <figure>
@@ -118,10 +118,10 @@
             <source src="public/reading-trends.mp4" type="video/mp4" />
             Your browser does not support HTML video.
           </video>
-          <span>
+          <small>
             <b>Reading Trends</b> / Data visualization drawing relationships
             between Google Trends and NYT Best Selling books in 2019
-          </span>
+          </small>
         </a>
       </figure>
 
@@ -132,10 +132,10 @@
             <source src="public/thinkspace.mp4" type="video/mp4" />
             Your browser does not support HTML video.
           </video>
-          <span>
+          <small>
             <b>Thinkspace</b> / A speculative exploration of conversational
             agents in discussion-based contexts
-          </span>
+          </small>
         </a>
       </figure>
     </article>
