revised copy + resume

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
         <b style="margin-bottom: 10px; display: inline-block">Joseph Zhang</b>
         <div>
           <p>
-            I'm a designer interested in all things related to data,
-            creative tools, and multimodal interaction. I believe good design is inherently emotional and affects
+            I'm a designer interested in all things related to digital toolmaking, multimodal interaction, and Web3 interfaces. I believe good design is inherently emotional and affects
             people in a way that can't be rationally understood. I'm a fourth year undergrad at Carnegie Mellon studying
             <a class="cmu-design" target="blank" href="https://design.cmu.edu/programs/undergrad">Communication
               Design</a>
@@ -35,7 +34,7 @@
             <br /><br />
           </p>
           <p>
-            Previously, I interned at
+            Previously, I've worked at
             <a target="_blank" href="https://www.apple.com">Apple</a>,
             <a target="_blank" href="https://www.natural.ai">Brain Technologies</a>, and
             <a target="_blank" href="https://www.elevationchurch.org">Elevation Church</a>. 
