--- a/index.html
+++ b/index.html
@@ -34,15 +34,13 @@
             <br /><br />
           </p>
           <p>
-            Previously, I've worked at
+            Previously, I worked at
             <a target="_blank" href="https://www.apple.com">Apple</a>,
             <a target="_blank" href="https://www.natural.ai">Brain Technologies</a>, and
             <a target="_blank" href="https://www.elevationchurch.org">Elevation Church</a>. 
             Currently, I'm designing editor experiences at <a target="_blank"
-            href="https://www.skiff.org">Skiff</a>, a
-            Web3 startup. On the side, I'm helping build and launch an NFT collection, <a target="_blank" href="https://twitter.com/coolmanuniverse"> Coolman's
-            Universe</a>.
-            <br><br> If you have an interesting
+            href="https://www.skiff.org">Skiff</a> and social features for <a target="_blank"
+            href="https://twitter.com/metalinklabs">Metalink</a>. If you have an interesting
             idea, let's get in touch.
           </p>
         </div>
