--- a/index.html
+++ b/index.html
@@ -22,11 +22,10 @@
   <main class="landing">
     <article>
       <section class="about">
-        <b style=" margin-bottom: 10px; display: inline-block">Joseph Zhang</b>
+        <b style=" margin-bottom: 5px; display: inline-block">Joseph Zhang</b>
         <div>
           <p>
-            I'm a designer interested in all things related to digital toolmaking, multimodal interaction, and Web3 interfaces. I believe good design is inherently emotional and affects
-            people in a way that can't be rationally understood. I'm a fourth year undergrad at Carnegie Mellon studying
+            I'm a designer interested in all things related to digital toolmaking, multimodal interaction, and systems thinking. I believe good design reflects artistic values focused around emotion and play. I'm a fourth year undergrad at Carnegie Mellon studying
             <a class="cmu-design" target="blank" href="https://design.cmu.edu/programs/undergrad">Communication
               Design</a>
             and
