--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <a target="_blank" href="https://www.natural.ai">Brain Technologies</a>, and
             <a target="_blank" href="https://www.elevationchurch.org">Elevation Church</a>. 
             Currently, I'm designing editor experiences at <a target="_blank"
-            href="https://www.skiff.org">Skiff</a> and social features for <a target="_blank"
+            href="https://www.skiff.org">Skiff</a> and chat features for <a target="_blank"
             href="https://twitter.com/metalinklabs">Metalink</a>. If you have an interesting
             idea, let's get in touch.
           </p>
